--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Tatcha Touch!</h1>
+    <h1>Tatcha Glam!</h1>
         <input type="text" class="form-control" placeholder="search your fave tatcha glam.."><br>
         <form class="form-inline">
                             <strong><span>by: </span></strong>
@@ -18,7 +18,7 @@
         <hr><br>
         <div class="col-md-3" ng-repeat="photo in photos | orderBy: order:direction | filter: tag | limitTo: numLimit">
                 <div class="thumbnail">
-                    <img ng-src="{{photo.url}}">
+                    <a href="#/photos/{{photos.indexOf(photo)}}"><img ng-src="{{photo.url}}"></a>
                 </div>
 
                 <div>
