--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 <div>
     <h1>Tatcha Glam!</h1>
-        <input type="text" class="form-control" placeholder="search your fave tatcha glam.."><br>
+        <input type="text" ng-model="query" class="form-control" placeholder="search for your fave tatcha glam.."><br>
         <form class="form-inline">
                             <strong><span>by: </span></strong>
                             <select ng-model="order">
@@ -16,14 +16,14 @@
         </form>
 
         <hr><br>
-        <div class="col-md-3" ng-repeat="photo in photos | orderBy: order:direction | filter: tag | limitTo: numLimit">
-                <div class="thumbnail">
+        <div class="col-md-3" ng-repeat="photo in photos | orderBy: order:direction | filter: query | limitTo: numLimit">
+                <div class="thumbnail rotate">
                     <a href="#/photos/{{photos.indexOf(photo)}}"><img ng-src="{{photo.url}}"></a>
                 </div>
 
                 <div>
-                    <h3>Tatch@{{photo.id}}</h3>
-                    <p>{{photo.title}}</p>
+                    <h4>Tatch@{{photo.id}}</h4>
+                    <a href="#/photos/{{photo.id}}"<p>{{photo.title}}</p></a>
                 </div>
         </div>
     </div>
