fixed the link to the main page

--- a/templates/photo-detail.html
+++ b/templates/photo-detail.html
@@ -1,6 +1,6 @@
 <section class="photo-detail">
 	<div class="col-md-offset-3 col-md-6" ng-model="photos"><br>
-		<h4><a href="/#photos">&laquo; Back to the Main Page</a> </h4><hr>
+		<h4><a href="http://ariffurqon.github.io/tatchaglam/#/">&laquo; Back to the Main Page</a> </h4><hr>
 	    <div class="thumbnail">
 	        <img ng-src="{{photos[whichPhoto].url}}">
 	    </div>
